website/versioned_docs/version-0.2.1/reference/store/redis.md
<!-- Code generated by gomarkdoc. DO NOT EDIT -->

# redis

```go
import "github.com/Bugs5382/go-saga-orchestration/store/redis"
```

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

Package redis is a Redis/Valkey\-backed store.Store implementation.

## type Option

Option configures a Store.

```go
type Option func(*Store)
```

<a name="WithPrefix"></a>
### func WithPrefix

```go
func WithPrefix(p string) Option
```

WithPrefix overrides the default "saga:" key prefix.

<a name="WithRunTTL"></a>
### func WithRunTTL

```go
func WithRunTTL(d time.Duration) Option
```

WithRunTTL sets the terminal\-run expiry \(0 disables\).

<a name="Store"></a>
## type Store

Store is a Redis/Valkey\-backed store.Store. Safe for concurrent use.

```go
type Store struct {
    // contains filtered or unexported fields
}
```

<a name="Open"></a>
### func Open

```go
func Open(ctx context.Context, url string, opts ...Option) (*Store, error)
```

Open dials url \(redis:// or rediss://; Redis or Valkey\) and verifies it.

<a name="Store.AppendEvent"></a>
### func \(\*Store\) AppendEvent

```go
func (s *Store) AppendEvent(ctx context.Context, evt domain.SagaRunEvent) error
```

AppendEvent appends evt to the per\-run event list and stores it under its own key for direct lookup by ID.

<a name="Store.AppendSignal"></a>
### func \(\*Store\) AppendSignal

```go
func (s *Store) AppendSignal(ctx context.Context, sig domain.SagaSignal) error
```

AppendSignal appends sig to the signals:\{runID\} list.

<a name="Store.ClearPause"></a>
### func \(\*Store\) ClearPause

```go
func (s *Store) ClearPause(ctx context.Context, runID uuid.UUID) error
```

ClearPause transitions the run to running, clears all await markers and wakeup\_at, and removes the run from idx:wakeup and idx:awaitevent:\{topic\}.

<a name="Store.Close"></a>
### func \(\*Store\) Close

```go
func (s *Store) Close() error
```

Close releases the client.

<a name="Store.CompleteAction"></a>
### func \(\*Store\) CompleteAction

```go
func (s *Store) CompleteAction(ctx context.Context, runID uuid.UUID, attempt int, result map[string]any) error
```

CompleteAction clears the dispatch marker, sets WakeupAt=now, and merges result into Variables. No\-op when attempt \!= CurrentAttempt \(late delivery\).

<a name="Store.CountRuns"></a>
### func \(\*Store\) CountRuns

```go
func (s *Store) CountRuns(ctx context.Context, filter store.RunFilter) (int, error)
```

CountRuns returns the total count matching filter \(ignoring Limit/Offset\).

<a name="Store.CreateRun"></a>
### func \(\*Store\) CreateRun

```go
func (s *Store) CreateRun(ctx context.Context, run domain.SagaRun) error
```

CreateRun stores the run blob and adds it to the two index structures.

<a name="Store.CreateUserTask"></a>
### func \(\*Store\) CreateUserTask

```go
func (s *Store) CreateUserTask(ctx context.Context, task domain.UserTask) error
```

CreateUserTask stores a new UserTask and adds it to the per\-run index.

<a name="Store.DeleteTrigger"></a>
### func \(\*Store\) DeleteTrigger

```go
func (s *Store) DeleteTrigger(ctx context.Context, id uuid.UUID) error
```

DeleteTrigger removes the trigger. Returns ErrNotFound if absent.

<a name="Store.FailAction"></a>
### func \(\*Store\) FailAction

```go
func (s *Store) FailAction(ctx context.Context, runID uuid.UUID, attempt int, code, message string, retryable bool) error
```

FailAction transitions the run to failed and appends an audit event AFTER the tx. No\-op when attempt \!= CurrentAttempt \(late delivery\).

<a name="Store.FindRunsByAwaitedEvent"></a>
### func \(\*Store\) FindRunsByAwaitedEvent

```go
func (s *Store) FindRunsByAwaitedEvent(ctx context.Context, topic string) ([]domain.SagaRun, error)
```

FindRunsByAwaitedEvent returns all paused runs awaiting an event on topic by loading members of idx:awaitevent:\{topic\} and returning those whose run blob is still paused and awaiting that topic \(defensive filter\).

<a name="Store.FindRunsByDueWakeup"></a>
### func \(\*Store\) FindRunsByDueWakeup

```go
func (s *Store) FindRunsByDueWakeup(ctx context.Context, now time.Time, limit int) ([]uuid.UUID, error)
```

FindRunsByDueWakeup returns up to limit run IDs of paused runs whose wakeup\_at is at or before now. It queries idx:wakeup via ZRANGEBYSCORE then loads the candidate run blobs and retains only those with State==RunStatePaused, matching the memory\-store oracle \(store/memory/store.go\). The limit bounds the result count, not the ZSET scan range.

<a name="Store.GetAction"></a>
### func \(\*Store\) GetAction

```go
func (s *Store) GetAction(ctx context.Context, service, name string, version int) (domain.ActionRegistration, error)
```

GetAction returns the registration for service\+name\+version, or ErrNotFound.

<a name="Store.GetEventByID"></a>
### func \(\*Store\) GetEventByID

```go
func (s *Store) GetEventByID(ctx context.Context, id uuid.UUID) (domain.SagaRunEvent, error)
```

GetEventByID returns the event with the given ID, or ErrNotFound.

<a name="Store.GetPublishedRuleByID"></a>
### func \(\*Store\) GetPublishedRuleByID

```go
func (s *Store) GetPublishedRuleByID(ctx context.Context, ruleID string, _ *uuid.UUID) (domain.RuleDefinition, error)
```

GetPublishedRuleByID returns the newest published version of ruleID, falling back to the most recent version when none is published. Returns ErrNotFound when ruleID has never been upserted.

<a name="Store.GetPublishedWorkflowByID"></a>
### func \(\*Store\) GetPublishedWorkflowByID

```go
func (s *Store) GetPublishedWorkflowByID(ctx context.Context, workflowID string, _ *uuid.UUID) (domain.WorkflowDefinition, error)
```

GetPublishedWorkflowByID returns the newest published version of workflowID, falling back to the most recent version when none is published. Returns ErrNotFound when the workflow ID has never been upserted.

<a name="Store.GetRun"></a>
### func \(\*Store\) GetRun

```go
func (s *Store) GetRun(ctx context.Context, id uuid.UUID) (domain.SagaRun, error)
```

GetRun returns the run with the given ID, or ErrNotFound.

<a name="Store.GetTrigger"></a>
### func \(\*Store\) GetTrigger

```go
func (s *Store) GetTrigger(ctx context.Context, id uuid.UUID) (domain.SagaTrigger, error)
```

GetTrigger returns the SagaTrigger for id, or ErrNotFound.

<a name="Store.GetUserTask"></a>
### func \(\*Store\) GetUserTask

```go
func (s *Store) GetUserTask(ctx context.Context, taskID uuid.UUID) (domain.UserTask, error)
```

GetUserTask returns the UserTask or ErrNotFound.

<a name="Store.GetWorkflowDefinition"></a>
### func \(\*Store\) GetWorkflowDefinition

```go
func (s *Store) GetWorkflowDefinition(ctx context.Context, id uuid.UUID) (domain.WorkflowDefinition, error)
```

GetWorkflowDefinition returns the definition stored at the given storage ID, or ErrNotFound.

<a name="Store.ListActions"></a>
### func \(\*Store\) ListActions

```go
func (s *Store) ListActions(ctx context.Context, filter store.ActionFilter) ([]domain.ActionRegistration, error)
```

ListActions returns all registrations matching the optional filter fields.

<a name="Store.ListChildrenByParent"></a>
### func \(\*Store\) ListChildrenByParent

```go
func (s *Store) ListChildrenByParent(ctx context.Context, parentID uuid.UUID, parentStepID string) ([]domain.SagaRun, error)
```

ListChildrenByParent returns all child runs for parentID/parentStepID.

<a name="Store.ListEventsByRun"></a>
### func \(\*Store\) ListEventsByRun

```go
func (s *Store) ListEventsByRun(ctx context.Context, runID uuid.UUID) ([]domain.SagaRunEvent, error)
```

ListEventsByRun returns all events for runID in append order. An empty slice \(not an error\) is returned when no events have been appended.

<a name="Store.ListRuns"></a>
### func \(\*Store\) ListRuns

```go
func (s *Store) ListRuns(ctx context.Context, filter store.RunFilter) ([]domain.SagaRun, error)
```

ListRuns returns saga runs matching filter, sorted StartedAt DESC, paginated.

<a name="Store.ListTriggers"></a>
### func \(\*Store\) ListTriggers

```go
func (s *Store) ListTriggers(ctx context.Context, filter store.TriggerFilter) ([]domain.SagaTrigger, error)
```

ListTriggers returns triggers matching the optional filter fields.

<a name="Store.ListUserTasksByRun"></a>
### func \(\*Store\) ListUserTasksByRun

```go
func (s *Store) ListUserTasksByRun(ctx context.Context, runID uuid.UUID) ([]domain.UserTask, error)
```

ListUserTasksByRun returns all user tasks for runID sorted by ID bytes. This matches the memory store's uuidLess ordering.

<a name="Store.MarkAwaitingAction"></a>
### func \(\*Store\) MarkAwaitingAction

```go
func (s *Store) MarkAwaitingAction(ctx context.Context, runID uuid.UUID, dispatch string, attempt int) error
```

MarkAwaitingAction sets state=paused and records the dispatch key \+ attempt. Idempotent on \(attempt, dispatch\): same pair returns without writing.

<a name="Store.PopTryCatch"></a>
### func \(\*Store\) PopTryCatch

```go
func (s *Store) PopTryCatch(ctx context.Context, runID uuid.UUID) (domain.TryCatchFrame, bool, error)
```

PopTryCatch removes and returns the top TryCatchFrame. Returns \(zero, false, nil\) when the stack is empty. Uses a closure variable to surface the popped value.

<a name="Store.PushTryCatch"></a>
### func \(\*Store\) PushTryCatch

```go
func (s *Store) PushTryCatch(ctx context.Context, runID uuid.UUID, frame domain.TryCatchFrame) error
```

PushTryCatch appends frame to the run's TryCatchStack. Returns an error if the stack is already at maximum depth \(3\).

<a name="Store.SetPausedAwaitingEvent"></a>
### func \(\*Store\) SetPausedAwaitingEvent

```go
func (s *Store) SetPausedAwaitingEvent(ctx context.Context, runID uuid.UUID, topic string, headers map[string]string) error
```

SetPausedAwaitingEvent marks the run paused awaiting an event on topic with the given header filter. The run is added to idx:awaitevent:\{topic\}.

<a name="Store.SetPausedAwaitingEventWithDeadline"></a>
### func \(\*Store\) SetPausedAwaitingEventWithDeadline

```go
func (s *Store) SetPausedAwaitingEventWithDeadline(ctx context.Context, runID uuid.UUID, topic string, headers map[string]string, deadline *time.Time) error
```

SetPausedAwaitingEventWithDeadline is SetPausedAwaitingEvent plus an optional wakeup deadline which is also recorded in idx:wakeup.

<a name="Store.SetPausedAwaitingSignal"></a>
### func \(\*Store\) SetPausedAwaitingSignal

```go
func (s *Store) SetPausedAwaitingSignal(ctx context.Context, runID uuid.UUID, signalName string, deadline *time.Time) error
```

SetPausedAwaitingSignal marks the run paused awaiting signalName, with an optional deadline added to idx:wakeup.

<a name="Store.SetPausedWithWakeup"></a>
### func \(\*Store\) SetPausedWithWakeup

```go
func (s *Store) SetPausedWithWakeup(ctx context.Context, runID uuid.UUID, wakeupAt time.Time) error
```

SetPausedWithWakeup marks the run paused with a wakeup time and registers it in the idx:wakeup ZSET.

<a name="Store.SpawnChildRun"></a>
### func \(\*Store\) SpawnChildRun

```go
func (s *Store) SpawnChildRun(ctx context.Context, parentID uuid.UUID, parentStepID, branchKey string, def domain.WorkflowDefinition, inputs map[string]any) (uuid.UUID, error)
```

SpawnChildRun creates a child run beginning at the child definition's default start step.

<a name="Store.SpawnChildRunAt"></a>
### func \(\*Store\) SpawnChildRunAt

```go
func (s *Store) SpawnChildRunAt(ctx context.Context, parentID uuid.UUID, parentStepID, branchKey string, def domain.WorkflowDefinition, inputs map[string]any, startStep string) (uuid.UUID, error)
```

SpawnChildRunAt creates a child run linked to parentID/parentStepID/branchKey, beginning at startStep \(empty string means the child definition's default start\). The whole operation — def upsert and run/index writes — is performed inside a single WATCH/MULTI/EXEC optimistic\-transaction retry loop so it is atomic.

<a name="Store.StatsForWorkflow"></a>
### func \(\*Store\) StatsForWorkflow

```go
func (s *Store) StatsForWorkflow(ctx context.Context, workflowID string) (store.WorkflowStats, error)
```

StatsForWorkflow computes aggregate metrics for workflowID.

<a name="Store.SubmitUserTask"></a>
### func \(\*Store\) SubmitUserTask

```go
func (s *Store) SubmitUserTask(ctx context.Context, taskID uuid.UUID, submittedBy string, result map[string]any) error
```

SubmitUserTask marks the task submitted. Returns ErrNotFound if it does not exist.

<a name="Store.TryConsumeAwaitedSignal"></a>
### func \(\*Store\) TryConsumeAwaitedSignal

```go
func (s *Store) TryConsumeAwaitedSignal(ctx context.Context, runID uuid.UUID, signalName string) (bool, error)
```

TryConsumeAwaitedSignal attempts to consume the awaited signal on the run. Returns \(false, nil\) when the run is missing, not paused, or the awaited signal name does not match. On match it clears all await markers and wakeup\_at, marks the first unconsumed matching signal as consumed, and returns \(true, nil\).

<a name="Store.UpdateRunState"></a>
### func \(\*Store\) UpdateRunState

```go
func (s *Store) UpdateRunState(ctx context.Context, id uuid.UUID, state domain.RunState, currentStep string) error
```

UpdateRunState sets the run's state and current step via a WATCH/MULTI transaction. When the new state is terminal, the run is removed from the active idx:wakeup and idx:awaitevent indexes.

<a name="Store.UpdateRunVariables"></a>
### func \(\*Store\) UpdateRunVariables

```go
func (s *Store) UpdateRunVariables(ctx context.Context, id uuid.UUID, merge map[string]any) error
```

UpdateRunVariables merges entries of merge into the run's Variables using dotted\-key path semantics, via a WATCH/MULTI transaction.

<a name="Store.UpsertActionRegistration"></a>
### func \(\*Store\) UpsertActionRegistration

```go
func (s *Store) UpsertActionRegistration(ctx context.Context, reg domain.ActionRegistration) error
```

UpsertActionRegistration stores or replaces a registration and adds it to idx:actions.

<a name="Store.UpsertRuleDefinition"></a>
### func \(\*Store\) UpsertRuleDefinition

```go
func (s *Store) UpsertRuleDefinition(ctx context.Context, def domain.RuleDefinition) (uuid.UUID, error)
```

UpsertRuleDefinition stores def atomically using a WATCH/MULTI optimistic transaction retry loop. If def.ID is the zero UUID a new one is generated. When re\-upserting an existing storage ID the old version\-list entry is removed inside the same transaction to prevent duplicates under concurrency.

<a name="Store.UpsertTrigger"></a>
### func \(\*Store\) UpsertTrigger

```go
func (s *Store) UpsertTrigger(ctx context.Context, trigger domain.SagaTrigger) (uuid.UUID, error)
```

UpsertTrigger inserts or replaces a SagaTrigger. Generates a new ID when trigger.ID == uuid.Nil. Defaults CreatedAt to now when zero.

<a name="Store.UpsertWorkflowDefinition"></a>
### func \(\*Store\) UpsertWorkflowDefinition

```go
func (s *Store) UpsertWorkflowDefinition(ctx context.Context, def domain.WorkflowDefinition) (uuid.UUID, error)
```

UpsertWorkflowDefinition stores def under a fresh storage ID and appends that ID to the def:byname:\{workflowID\} list \(oldest→newest order\).

<a name="Store.WakeFromExternal"></a>
### func \(\*Store\) WakeFromExternal

```go
func (s *Store) WakeFromExternal(ctx context.Context, runID uuid.UUID) error
```

WakeFromExternal clears all await markers and wakeup\_at while leaving the run state as paused, then removes it from idx:wakeup / idx:awaitevent.

Generated by [gomarkdoc](<https://github.com/princjef/gomarkdoc>)
